--- a/_includes/block/gallery.html
+++ b/_includes/block/gallery.html
@@ -28,6 +28,75 @@
               </div>
             </div>
 
+            <!-- row 3 -->
+            <div class="grid gap-8 mb-8" style="grid-template-columns: 5fr 2fr">
+              <div class="relative">
+                <div style="aspect-ratio:13/7;">
+                  <img class="absolute inset-0 h-full w-full object-cover" src="{{block.images[3].image}}" alt="{{block.images[3].alt}}">
+                </div>
+              </div>
+              
+              <div class="relative">
+                <div style="aspect-ratio:10/12.5;">
+                  <img class="absolute inset-0 h-full w-full object-cover" src="{{block.images[4].image}}" alt="{{block.images[4].alt}}">
+                </div>
+
+              </div>
+            </div>
+
+            <!-- row 4 -->
+            <div class="grid gap-8 mb-8" style="grid-template-columns: 2fr 5fr">
+              <div class="relative">
+                <div style="aspect-ratio:10/12.5;">
+                  <img class="absolute inset-0 h-full w-full object-cover" src="{{block.images[5].image}}" alt="{{block.images[5].alt}}">
+                </div>
+              </div>
+              
+              <div class="relative">
+                <div style="aspect-ratio:13/7;">
+                  <img class="absolute inset-0 h-full w-full object-cover" src="{{block.images[6].image}}" alt="{{block.images[6].alt}}">
+                </div>
+
+              </div>
+            </div>
+
+
+            <!-- row 5 -->
+            <div class="grid gap-8 mb-8" style="grid-template-columns: 1fr">
+              <div class="relative">
+                <div style="aspect-ratio:16/9;">
+                  <img class="absolute inset-0 h-full w-full object-cover" src="{{block.images[7].image}}" alt="{{block.images[7].alt}}">
+                </div>
+
+              </div>
+            </div>
+
+            <!-- row 5 -->
+            <div class="grid gap-8 mb-8" style="grid-template-columns: 1fr 1fr 1fr">
+              <div class="relative">
+                <div style="aspect-ratio:16/9;">
+                  <img class="absolute inset-0 h-full w-full object-cover" src="{{block.images[8].image}}" alt="{{block.images[8].alt}}">
+                </div>
+
+              </div>
+              <div class="relative">
+                <div style="aspect-ratio:16/9;">
+                  <img class="absolute inset-0 h-full w-full object-cover" src="{{block.images[8].image}}" alt="{{block.images[8].alt}}">
+                </div>
+
+              </div>
+              <div class="relative">
+                <div style="aspect-ratio:16/9;">
+                  <img class="absolute inset-0 h-full w-full object-cover" src="{{block.images[8].image}}" alt="{{block.images[8].alt}}">
+                </div>
+
+              </div>
+            </div>
+
+
+
+
+
           </div>
       </div>
     </section>
