--- a/_includes/block/text-block-top-overlap.html
+++ b/_includes/block/text-block-top-overlap.html
@@ -25,7 +25,7 @@
         <div class="absolute left-[5%] right-[5%] bottom-6 hidden md:grid" style="grid-template-columns: repeat({{block.bottom-text.links.size}}, 1fr);">
           {% for link in block.bottom-text.links %}
             <div class="engravers-gothic">
-              <a href="{{link.rul}}">{{link.text}}</a>
+              <a href="{{link.url}}">{{link.text}}</a>
             </div>
           {% endfor %}
         </div>
