--- a/_includes/block/rooms.html
+++ b/_includes/block/rooms.html
@@ -49,7 +49,8 @@
                       <a href="/" class="button-featured"> Reserve Now</a>
                       <span class="button button-dialog">take a tour</span>
                     </p>
-                    <dialog>
+                    <dialog class="outline-none">
+                      <span class="dialog-close-X">X</span>
                       <img src="{{room.tour-pic}}" alt="{{room.name}} layout" >
                     </dialog>
 
@@ -96,6 +97,16 @@
         display: flex;
       }
 
+
+.dialog-close-X {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+  font-size: 1.5rem;
+  border: none;
+  background: none;
+}
 </style>
 <script>
 
@@ -106,8 +117,28 @@ tourButtons.forEach(button => {
     const dialog = button.parentElement.nextElementSibling
     console.log(dialog)
     dialog.showModal()
-    })
+  })
 })
+
+const dialogs = document.querySelectorAll('dialog')
+dialogs.forEach(dialog => {
+        dialog.addEventListener('click', (event) => {
+         if (event.target === dialog) {
+             // This code will execute when the backdrop is clicked
+            //  console.log('Backdrop clicked!');
+             // Example: Close the dialog
+            dialog.close();
+         }
+         
+        })
+    })
+
+    const closeButtons = document.querySelectorAll('.dialog-close-X')
+    closeButtons.forEach(button => {
+      button.addEventListener('click', () => {
+        button.parentElement.close()
+      })
+    })
 
 const styles = document.querySelectorAll('.style-set')
 
