tour-pic update

--- a/_includes/block/rooms.html
+++ b/_includes/block/rooms.html
@@ -47,10 +47,10 @@
                     </p>
                     <p class="scheme-dark">
                       <a href="/" class="button-featured"> Reserve Now</a>
-                      <span class="button button-dialog">take a tour</span>
+                      <span class="button button-dialog cursor-pointer">take a tour</span>
                     </p>
                     <dialog class="outline-none">
-                      <span class="dialog-close-X">X</span>
+                      <span class="dialog-close-X cursor-pointer">X</span>
                       <img src="{{room.tour-pic}}" alt="{{room.name}} layout" >
                     </dialog>
 
