--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,6 +490,9 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
+.bottom-4 {
+  bottom: 1rem;
+}
 .bottom-6 {
   bottom: 1.5rem;
 }
@@ -534,6 +537,9 @@ video {
 }
 .z-50 {
   z-index: 50;
+}
+.z-\[500\] {
+  z-index: 500;
 }
 .z-\[999\] {
   z-index: 999;
@@ -703,11 +709,17 @@ video {
 .h-16 {
   height: 4rem;
 }
+.h-4 {
+  height: 1rem;
+}
 .h-\[50vh\] {
   height: 50vh;
 }
 .h-full {
   height: 100%;
+}
+.h-6 {
+  height: 1.5rem;
 }
 .min-h-\[50vh\] {
   min-height: 50vh;
@@ -723,6 +735,9 @@ video {
 }
 .w-32 {
   width: 8rem;
+}
+.w-4 {
+  width: 1rem;
 }
 .w-4\/5 {
   width: 80%;
@@ -748,6 +763,9 @@ video {
 }
 .w-screen {
   width: 100vw;
+}
+.w-6 {
+  width: 1.5rem;
 }
 .min-w-min {
   min-width: -moz-min-content;
@@ -898,6 +916,9 @@ video {
 }
 .whitespace-nowrap {
   white-space: nowrap;
+}
+.rounded-full {
+  border-radius: 9999px;
 }
 .\!border-0 {
   border-width: 0px !important;
