capped rooms tour height

--- a/_includes/block/rooms.html
+++ b/_includes/block/rooms.html
@@ -57,7 +57,7 @@
                     </p>
                     <dialog class="outline-none">
                       <span class="dialog-close-X cursor-pointer">X</span>
-                      <img src="{{room.tour-pic}}" alt="{{room.name}} layout" >
+                      <img src="{{room.tour-pic}}" alt="{{room.name}} layout" class="max-h-[90vh]" >
                     </dialog>
 
                   </div>
