button update color

--- a/_includes/block/split-banner-slider.html
+++ b/_includes/block/split-banner-slider.html
@@ -33,7 +33,7 @@
             <div class="flex">
               <div>
             {% for button in block.content.buttons %}
-              <p class="scheme-{{button.button-color}}"><a href="{{button.url}}" class="button-featured bg-base w-full text-center">{{button.text}}</a></p>
+              <p class="scheme-{{button.color-scheme}}"><a href="{{button.url}}" class="button-featured bg-base w-full text-center">{{button.text}}</a></p>
 
             {% endfor %}
           </div>
