explore buttons and rooms sizes

--- a/_includes/block/rooms.html
+++ b/_includes/block/rooms.html
@@ -35,7 +35,7 @@
                   <h2 class="">{{room.name}}</h2>
                   <div class="flex gap-x-8 flex-wrap text-sm engravers-gothic mb-4">
                     <span class="whitespace-nowrap">
-                      {{room.size}} SQ/FT
+                      {{room.size}} SQ/FT {{room.size-m}} SQM
                     </span>
                     <span class="whitespace-nowrap">
                       {{room.bed-size}}
