--- a/_includes/block/booking.html
+++ b/_includes/block/booking.html
@@ -38,7 +38,7 @@
               <input type="hidden" name="_to" value="#">
               <input type="text" name="_gotcha" style="display: none;">
             <div class="text-center scheme-dark col-span-2">
-              <a href="" id="bookingButton" class="border border-[currentcolor] inline-block bg-base border-solid px-4 py-2 w-min" type="submit" value="Send Message">
+              <a href="" id="bookingButton" class="border border-[currentcolor] inline-block bg-base border-solid px-4 py-2" type="submit" value="Send Message">
               book now
             </div>
           </form>
