--- a/_includes/block/highlights.html
+++ b/_includes/block/highlights.html
@@ -20,7 +20,7 @@
           <h3 class="heading-lg h2 mt-0">{{highlight.heading}}</h3>
           <p>{{highlight.text}}</p>
           {% if highlight.button-text and highlight.link %}
-          <a href="{{highlight.link}}">{{highlight.button-text}}</a>
+          <a class="button-featured" href="{{highlight.link}}">{{highlight.button-text}}</a>
           {% endif %}
         </div>
 
