fixed highlights button

--- a/_includes/block/highlights.html
+++ b/_includes/block/highlights.html
@@ -16,7 +16,7 @@
           <img class="absolute inset-0 h-full w-full object-cover" src="{{highlight.image}}" alt="{{highlight.image_alt}}">
         </div>
 
-        <div class="mx-auto w-2/3 -top-12 bg-base relative p-8">
+        <div class="mx-auto w-2/3 -top-12 bg-base relative p-8 text-center">
           <h3 class="heading-lg h2 mt-0">{{highlight.heading}}</h3>
           <p>{{highlight.text}}</p>
           {% if highlight.button-text and highlight.link %}
