--- a/_includes/block/booking.html
+++ b/_includes/block/booking.html
@@ -1,5 +1,5 @@
 
-<section class="booking-form">
+<section class="booking-form" id="booking-section">
       <div class="max-width">
           <div class="mx-auto mb-12">
             <h2 class="large-heading">Book now</h2>
@@ -37,7 +37,7 @@
               <!-- <input type="hidden" name="inbox_key" value="sukhavatibali"> -->
               <input type="hidden" name="_to" value="#">
               <input type="text" name="_gotcha" style="display: none;">
-            <div class="text-center scheme-dark col-span-2">
+            <div class="text-center scheme-dark col-span-full">
               <a href="" id="bookingButton" class="border border-[currentcolor] inline-block bg-base border-solid px-4 py-2" type="submit" value="Send Message">
               book now
             </div>
