--- a/_includes/block/rooms.html
+++ b/_includes/block/rooms.html
@@ -52,7 +52,7 @@
                       {{room.content}}
                     </p>
                     <p class="scheme-dark">
-                      <a href="/" class="button-featured"> Reserve Now</a>
+                      <a href="#booking-section" class="button-featured"> Reserve Now</a>
                       <span class="button button-dialog cursor-pointer">View Floorplan</span>
                     </p>
                     <dialog class="outline-none">
