--- a/style.css
+++ b/style.css
@@ -26,12 +26,14 @@ img.bg-cover-image{
 
 html {
   scroll-padding-top: 107px;
+  scroll-behavior: smooth;
 }
 
 body{
   font-family:  var(--body-font-family);
   max-width: 100vw;
   overflow-X: hidden;
+  scroll-behavior: smooth;
   /* Set padding equal to height of fixed header */
   scroll-padding-top: 107px;
   background-color: #f0f0f0;
