--- a/_includes/block/booking.html
+++ b/_includes/block/booking.html
@@ -71,10 +71,9 @@
 
 console.log(bookingButton,inputs,'look here');
 
-inputs.forEach(input => {
-  
-  input.addEventListener('change', function() {
-    console.log(bookingButton,inputs);
+
+function updatelink() {
+console.log(bookingButton,inputs);
 
     const checkInDate = checkInInput.value.split('-');
     const checkOutDate = checkOutInput.value.split('-');
@@ -92,9 +91,15 @@ inputs.forEach(input => {
     bookingButton.href = `
     https://www.ihg.com/regent/hotels/gb/en/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qSlH=DPSCR&qRms=${ roomCount }&qAdlt=${ adultCount }&qChld=${ childrenCount }&qCiD=${ checkInDate[2] }&qCiMy=${ checkInDate[1] }/${ checkInDate[0] }&qCoD=${ checkOutDate[2] }&qCoMy=${ checkOutDate[1] }/${ checkOutDate[0] }&qAAR=6CBARC&qRtP=6CBARC&setPMCookies=true&qSHBrC=RE&qDest=Jl.%20Pantai%20Batu%20Bolong%20B%20No.%2093xx,%20Bali,%20ID&srb_u=1&qRmFltr=`
 
-})
+}
+
+inputs.forEach(input => {
+  
+  input.addEventListener('change', updatelink);
 
 })
+
+updatelink();
 
 
 //     https://www.ihg.com/regent/hotels/gb/en/find-hotels/select-roomrate
