updated booking form

--- a/_includes/block/booking.html
+++ b/_includes/block/booking.html
@@ -1,10 +1,11 @@
 
 <section class="booking-form" id="booking-section">
       <div class="max-width">
-          <div class="mx-auto mb-12">
-            <h2 class="large-heading">Book now</h2>
+          <div class="mx-auto mb-12 text-center">
+            <h2 class="large-heading">Make your reservation</h2>
+            <p>Unwind in the idyllic setting of Regent Bali Canggu.  </p>
           </div>
-            <div class="mx-auto grid grid-cols-6 gap-x-16 gap-y-12">
+            <div class="mx-auto grid grid-cols-6 lg:grid-cols-12 gap-x-16 gap-y-12">
               <div class="col-span-3">
                 <label for="question" class="uppercase">check out day</label>
                 <input type="date" 
@@ -38,8 +39,8 @@
               <input type="hidden" name="_to" value="#">
               <input type="text" name="_gotcha" style="display: none;">
             <div class="text-center scheme-dark col-span-full">
-              <a href="" id="bookingButton" class="border border-[currentcolor] inline-block bg-base border-solid px-4 py-2" type="submit" value="Send Message">
-              book now
+              <a href="" id="bookingButton" class="border border-[currentcolor] inline-block bg-base border-solid px-4 py-2 button-featured">
+              Check Availability
             </div>
           </form>
       </div>
