--- a/_includes/block/booking.html
+++ b/_includes/block/booking.html
@@ -39,7 +39,7 @@
               <input type="hidden" name="_to" value="#">
               <input type="text" name="_gotcha" style="display: none;">
             <div class="text-center scheme-dark col-span-full">
-              <a href="" id="bookingButton" class="border border-[currentcolor] inline-block bg-base border-solid px-4 py-2 button-featured">
+              <a href="/SUITES-and-VILLAS#booking-section" id="bookingButton" class="border border-[currentcolor] inline-block bg-base border-solid px-4 py-2 button-featured">
               Check Availability
             </div>
           </form>
