--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -153,7 +153,7 @@
 
       </nav>
       
-      <a href="#" class="absolute xl:static right-0 button-featured ml-[15px] !hidden md:!block !border-0" style="background-color: #D5E3DD; color: #000">Book Now</a>
+      <a href="/SUITES-and-VILLAS#booking-section" class="absolute xl:static right-0 button-featured ml-[15px] !hidden md:!block !border-0" style="background-color: #D5E3DD; color: #000">Book Now</a>
 
 
     </div>
