--- a/_includes/block/booking.html
+++ b/_includes/block/booking.html
@@ -96,7 +96,7 @@ console.log(bookingButton,inputs);
 
 inputs.forEach(input => {
   
-  input.addEventListener('change', updatelink());
+  input.addEventListener('change', updatelink);
 
 })
 
