--- a/_includes/block/rooms.html
+++ b/_includes/block/rooms.html
@@ -19,9 +19,9 @@
                   {% for image in room.images %}
                   <img class="h-full w-full inset-0 absolute object-cover object-center gallery-image {% if forloop.first%}active{% endif %}" src="{{image.image}}" alt="{{room.name}}">
                   {% endfor %}
-                  <div class="flex gap-2 absolute z-[500] bottom-4 right-4">
+                  <div class="flex gap-2 absolute z-[500] w-full bottom-4 justify-center">
                     {% for image in room.images %}
-                    <span data-target="{{forloop.index0}}" class=" w-6 h-6 block border rounded-full gallery-switch {% if forloop.first%}active{% endif %}">
+                    <span data-target="{{forloop.index0}}" class=" w-3 h-3 block border rounded-full gallery-switch {% if forloop.first%}active{% endif %}">
                     </span>
                     {% endfor %}
                   </div>
