new years offer

--- a/_includes/block/offers.html
+++ b/_includes/block/offers.html
@@ -16,7 +16,7 @@
                 <h3 class="sub-heading">{{event.sub-heading}}</h3>
                 <h3 class="large-heading heading">{{event.heading}}</h3>
                 {{event.full-description}}
-                <a href="{{event.button-link}}" class="button-featured">{{event.button-text}}</a>
+                <a href="{{event.url}}" class="button-featured">{{event.button-text}}</a>
 
               </div>
             </div>
@@ -32,7 +32,7 @@
                 <h3 class="heading">{{event.heading}}</h3>
                 <p class="grow">{{event.short-description}}</p>
                 <div>
-                  <a href="{{event.button-link}}" class="button-featured color-set ">{{event.button-text}}</a>
+                  <a href="{{event.url}}" class="button-featured color-set ">{{event.button-text}}</a>
                 </div>
 
               </div>
@@ -41,5 +41,8 @@
           </div>
       </div>
     </section>
+
+
+
 
 
