--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1129,6 +1129,10 @@ video {
     margin: 0;
     box-sizing: border-box;
 }
+video::-webkit-media-controls {
+    display: none;
+}
+
 
 img{ max-width: 100%; height:auto;}
 
